# LSP-file-watcher-rust

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  dependencies.json  watcher.py
.github/workflows/: CI.yml  build.yml  release.yml
linux-arm64/: rust-watcher
linux-x64/: rust-watcher
osx-arm64/: rust-watcher
osx-x64/: rust-watcher
scripts/: parity_check.sh  perf_check.sh  watchdog_check.ps1  watchdog_check.sh
src/: main.rs
