[package]
name = "rust-watcher"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
glob = "0.3"
notify-debouncer-full = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "linux")'.dependencies]
rustix = { git = "https://github.com/ruihe774/rustix.git", branch = "scheduler", features = ["process", "event"] }

[target.'cfg(windows)'.dependencies]
windows = { version = ">=0.51,<0.60", features = ["Wdk_System_Threading", "Win32_System_Threading"] }

[profile.release]
opt-level = "s"
strip = true
lto = true
panic = "abort"
