[package]
name = "rust-watcher"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
globset = "0.4"
notify = { version = "8", features = ["macos_kqueue"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "linux")'.dependencies]
rustix = { git = "https://github.com/ruihe774/rustix.git", branch = "scheduler", features = ["process", "event"] }

[target.'cfg(windows)'.dependencies]
windows = { version = ">=0.51", features = ["Wdk_System_Threading", "Win32_System_Threading"] }

[profile.release]
opt-level = "s"
strip = true
lto = true
panic = "abort"
